<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/home_page_avatar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/avatar"
                    android:focusable="true"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/home_page_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/user_name" />

            <ImageView
                android:id="@+id/home_page_add_button_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/add_button_image" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F6F6F6"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_page_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F6F6F6"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/home_page_test_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="hello"
                    android:layout_gravity="start" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_page_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#FFF">


        <TextView
            android:id="@+id/drawer_add_friend_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:drawablePadding="8dp"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/drawer_log_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:drawablePadding="8dp"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true" />


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>